# shell-ai-hackathon

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  environment.yml
data/fixtures/: turbine_locations_528_37033.csv  turbine_locations_528_39818.csv  turbine_locations_528_84361.csv  turbine_locations_528_88678.csv
evaluators/: Farm_Evaluator.m  Farm_Evaluator.py  Farm_Evaluator_Vec.py  README.md  benchmark.py
output/: turbine_locations.csv
src/: benchmark.cpp  common.h  file_reader.cpp  file_reader.h  main.cpp
src/core/: constants.h  constraint_checker.cpp  constraint_checker.h  evaluator.cpp  evaluator.h  file_reader.cpp  file_reader.h
src/strategy/: layout_evaluator.cpp  layout_evaluator.h  layout_generator.cpp  layout_generator.h
tests/: file_reader.cpp  helpers.h  main.cpp
tests/core/: constraint_checker.cpp  evaluator.cpp  file_reader.cpp
tests/strategy/: layout_evaluator.cpp
